--- a/templates/index_2.html
+++ b/templates/index_2.html
@@ -8,14 +8,14 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi">
   <title>Ош ZYAN маркетинг</title>
-  <link rel="icon" type="image/png" href="{% 'images/favicon.png' %}">
-  <link rel="stylesheet" href="{%'css/font-awesome-pro.css'%}">
-  <link rel="stylesheet" href="{%'css/bootstrap.min.css '%}">
-  <link rel="stylesheet" href="{%'css/scroll_button.css '%} ">
-  <link rel="stylesheet" href="{%'css/spacing.css '%} ">
-  <link rel="stylesheet" href="{%' css/plugin.css '%}">
-  <link rel="stylesheet" href="{%'css/style.css'%} ">
-  <link rel="stylesheet" href="{%' css/responsive.css '%}">
+  <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
+  <link rel="stylesheet" href="{% static 'css/font-awesome-pro.css'%}">
+  <link rel="stylesheet" href="{%  static 'css/bootstrap.min.css '%}">
+  <link rel="stylesheet" href="{% static 'css/scroll_button.css '%} ">
+  <link rel="stylesheet" href="{% static 'css/spacing.css '%} ">
+  <link rel="stylesheet" href="{% static 'css/plugin.css '%}">
+  <link rel="stylesheet" href="{% static 'css/style.css'%} ">
+  <link rel="stylesheet" href="{% static ' css/responsive.css '%}">
 </head>
 
 
@@ -40,30 +40,30 @@
  </li>
       <li>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="#about">
-          <span><img src="{%' svg/clipboard.svg '%} " alt="icon" class="img-fluid w-100 svg"></span>О нас
+          <span><img src="{% static 'svg/clipboard.svg '%} " alt="icon" class="img-fluid w-100 svg"></span>О нас
         </a>
       </li>
       <li>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="#service">
-          <span><img src="{%' svg/briefcase.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
+          <span><img src="{% static 'svg/briefcase.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
           Услуги
         </a>
       </li>
       <li>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="#portfolio">
-          <span><img src="{%' svg/messages-1.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
+          <span><img src="{% static ' svg/messages-1.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
           Товары
         </a>
       </li>
       <li>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="#blog">
-          <span><img src="{%'svg/quote-down-square.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
+          <span><img src="{% static 'svg/quote-down-square.svg'%} " alt="icon" class="img-fluid w-100 svg"></span>
           Блог
         </a>
       </li>
       <li>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="#contact">
-          <span><img src=" {%' svg/user-square.svg '%} " alt="icon" class="img-fluid w-100 svg"></span>
+          <span><img src=" {% static ' svg/user-square.svg '%} " alt="icon" class="img-fluid w-100 svg"></span>
           Контакты
         </a>
         <a class="list-group-item list-group-item-action text_hover_animaiton" href="https://oshtu.kg/">
